# SlicerEHRSandbox

./: CMakeLists.txt  README.md
FHIRReader/: CMakeLists.txt  FHIRReader.py
FHIRReader/FHIRReader/: CMakeLists.txt  FHIRReader.py
FHIRReader/FHIRReader/Resources/: fhir-layout.xml
FHIRReader/FHIRReader/Resources/UI/: FHIRReader.ui
FHIRReader/Resources/: fhir-layout.xml
FHIRReader/Resources/UI/: FHIRReader.ui
FHIRReader/Utils/: BusyCursor.py  DependencyInstaller.py
